--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "unified-mcp": "bin/unified-mcp"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --test test/**/*.test.js"
   },
   "repository": {
     "type": "git",
